Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBVB.BAS

Public Declare Function BTICSDB_CmdStartRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdStartRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICSDB_CmdStartWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdStartWr@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_CmdStepWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdStepWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_CmdTotalRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdTotalRd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_CmdTotalWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdTotalWr@12" (ByVal countval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_CmdWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdWr@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_DllUsageCount Lib "BTICSDB.DLL" Alias "_BTICSDB_DllUsageCount@0" () As Long
Public Declare Function BTICSDB_FilterAddr Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterAddr@16" (ByVal addrval As Long, ByVal sival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_FilterCreate Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterCreate@4" (ByVal handleval As Long) As Long
Public Declare Function BTICSDB_FilterFill Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterFill@12" (ByVal msgaddr As Long, ByVal basevaladdr As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_GetChanCount Lib "BTICSDB.DLL" Alias "_BTICSDB_GetChanCount@12" (ByRef rcvcount As Long, ByRef xmtcount As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_IsChan Lib "BTICSDB.DLL" Alias "_BTICSDB_IsChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_IsRcvChan Lib "BTICSDB.DLL" Alias "_BTICSDB_IsRcvChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_IsXmtChan Lib "BTICSDB.DLL" Alias "_BTICSDB_IsXmtChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListAddr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListAddr@12" (ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListAddrEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ListAddrEx@16" (ByVal index As Long, ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListAdvance Lib "BTICSDB.DLL" Alias "_BTICSDB_ListAdvance@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListClear Lib "BTICSDB.DLL" Alias "_BTICSDB_ListClear@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListConfig Lib "BTICSDB.DLL" Alias "_BTICSDB_ListConfig@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListConfigEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ListConfigEx@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListDataRdEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ListDataRdEx@20" (ByRef buf As Byte, ByVal count As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListDataWrEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ListDataWrEx@20" (ByRef buf As Byte, ByVal count As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListInit Lib "BTICSDB.DLL" Alias "_BTICSDB_ListInit@12" (ByVal listaddr As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListNextRd Lib "BTICSDB.DLL" Alias "_BTICSDB_ListNextRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListNextWr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListNextWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_ListPostRd Lib "BTICSDB.DLL" Alias "_BTICSDB_ListPostRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTICSDB_ListPostWr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListPostWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTICSDB_ListPreRd Lib "BTICSDB.DLL" Alias "_BTICSDB_ListPreRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTICSDB_ListPreWr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListPreWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Function BTICSDB_MsgActivityRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgActivityRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICSDB_MsgActivityWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgActivityWr@12" (ByVal value As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_MsgCheck Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCheck@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTICSDB_MsgCommRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCommRd@12" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgCommWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCommWr@12" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgConfig Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgConfig@16" (ByVal configval As Long, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgCreateEx Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCreateEx@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgFieldRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgFieldRd@12" (ByVal fieldtype As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgFieldWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgFieldWr@16" (ByVal fieldval As Long, ByVal fieldtype As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgOptRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICSDB_MsgOptWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_MsgReset Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedAgain Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedAgain@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedBranchEx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedBranchEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedBuildEx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedBuildEx@32" (ByVal nummsgs As Long, ByRef msgs As Long, ByRef freq As Long, ByVal interblockgap As Long, ByVal rsvdblocks As Long, ByVal bitrate As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedBuildExx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedBuildExx@40" (ByVal nummsgs As Long, ByRef msgs As Long, ByRef freq As Long, ByVal interblockgap As Long, ByVal rsvdblocks As Long, ByVal bitrate As Long, ByVal buf As Long, ByVal bufsize As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedCallEx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedCallEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedGCD Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedGCD@8" (ByVal a As Long, ByVal b As Long) As Long
Public Declare Function BTICSDB_SchedLCM Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedLCM@8" (ByVal a As Long, ByVal b As Long) As Long
Public Declare Function BTICSDB_SchedLogEx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedLogEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedNop Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedNop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedPulse0 Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedPulse0@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedPulse1 Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedPulse1@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedUser Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedUser@12" (ByVal useraddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_TestProtocol Lib "BTICSDB.DLL" Alias "_BTICSDB_TestProtocol@4" (ByVal handleval As Long) As Long

'/**
'*
'*  Channel number constants
'*
'**/

Public Const CH0 As Integer = &H0    '//Channel 0
Public Const CH1 As Integer = &H1    '//Channel 1
Public Const CH2 As Integer = &H2    '//Channel 2
Public Const CH3 As Integer = &H3    '//Channel 3
Public Const CH4 As Integer = &H4    '//Channel 4
Public Const CH5 As Integer = &H5    '//Channel 5
Public Const CH6 As Integer = &H6    '//Channel 6
Public Const CH7 As Integer = &H7    '//Channel 7
Public Const CH8 As Integer = &H8    '//Channel 8
Public Const CH9 As Integer = &H9    '//Channel 9
Public Const CH10 As Integer = &HA   '//Channel 10
Public Const CH11 As Integer = &HB   '//Channel 11
Public Const CH12 As Integer = &HC   '//Channel 12
Public Const CH13 As Integer = &HD   '//Channel 13
Public Const CH14 As Integer = &HE   '//Channel 14
Public Const CH15 As Integer = &HF   '//Channel 15
Public Const CH16 As Integer = &H10   '//Channel 16
Public Const CH17 As Integer = &H11   '//Channel 17
Public Const CH18 As Integer = &H12   '//Channel 18
Public Const CH19 As Integer = &H13   '//Channel 19
Public Const CH20 As Integer = &H14   '//Channel 20
Public Const CH21 As Integer = &H15   '//Channel 21
Public Const CH22 As Integer = &H16   '//Channel 22
Public Const CH23 As Integer = &H17   '//Channel 23
Public Const CH24 As Integer = &H18   '//Channel 24
Public Const CH25 As Integer = &H19   '//Channel 25
Public Const CH26 As Integer = &H1A   '//Channel 26
Public Const CH27 As Integer = &H1B   '//Channel 27
Public Const CH28 As Integer = &H1C   '//Channel 28
Public Const CH29 As Integer = &H1D   '//Channel 29
Public Const CH30 As Integer = &H1E   '//Channel 30
Public Const CH31 As Integer = &H1F   '//Channel 31

'/**
'*
'*  Bitrate configuration options
'*
'**/

Public Const BITRATECSDB_CLK1 As Integer = &H8000   '//CLK1, 20 MHz (default)
Public Const BITRATECSDB_CLK2 As Integer = &H0   '//CLK2, 9.216 MHz (standard option)
Public Const BITRATECSDB_XMTSLOPEHIGH As Integer = &H0   '//Transmit with high speed slope (default)
Public Const BITRATECSDB_XMTSLOPELOW As Integer = &H4000    '//Transmit with low speed slope
